Updated front matter

--- a/_config.yml
+++ b/_config.yml
@@ -29,6 +29,8 @@ author:
   google_plus:      https://plus.google.com/+MattSmithYo/posts
   linkedin:         https://linkedin.com/in/allthingssmitty
   twitter:          https://twitter.com/allthingssmitty
+  follow_me_on:     Follow me on
+  share_on:         Share on
 
 # Custom vars
 version:            1.0.0
