--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ permalink:          pretty
 
 # Setup
 title:              Matt Smith
-tagline:            Web Dev, Mobile Strategist, Front-End Astronaut
+tagline:            Web Dev, Front-End Engineer, UX Designer
 url:                http://allthingssmitty.com
 brand:              allthingssmitty
 paginate:           3
