--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ permalink:          pretty
 # Setup
 title:              Matt Smith
 tagline:            Web Dev, Front-End Engineer, UX Designer
-url:                http://allthingssmitty.com
+url:                https://allthingssmitty.com
 brand:              allthingssmitty
 paginate:           3
 baseurl:            ""
@@ -24,9 +24,9 @@ timezone:           America/New_York
 # About/contact
 author:
   name:             Matt Smith
-  url:              http://allthingssmitty.com
+  url:              https://allthingssmitty.com
   email:            matt@allthingssmitty.com
-  codepen:          http://codepen.io/allthingssmitty
+  codepen:          https://codepen.io/allthingssmitty
   github:           https://github.com/allthingssmitty
   google_plus:      https://plus.google.com/+MattSmithYo/posts
   linkedin:         https://linkedin.com/in/allthingssmitty
