--- a/_config.yml
+++ b/_config.yml
@@ -41,7 +41,7 @@ author:
   linkedin:         https://linkedin.com/in/allthingssmitty
   twitter:          https://twitter.com/allthingssmitty
   follow_me_on:     Follow me on
-  share_on:         Share on
+  share_on:         Share this post on
 
 # Custom vars
 version:            2.0.0
