--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ paginate:           3
 baseurl:            ""
 
 # Site
-description:        Matt Smith is a Maine-based web developer who builds applications to deliver engaging user interactions and experiences.
+description:        Matt Smith is a Maine-based application developer who builds solutions to deliver engaging user experiences.
 
 # Google analytics
 analytics_id:       UA-55352436-3
