--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ permalink: pretty
 
 # Setup
 title: Matt Smith
-tagline: "Web Dev, Front-End Engineer, UX Designer"
+tagline: "Web Dev | Front-End Engineer | UX Designer"
 url: "https://allthingssmitty.com"
 brand: &brand_name
   allthingssmitty
