--- a/_config.yml
+++ b/_config.yml
@@ -42,3 +42,8 @@ github:
 plugins:
   - jekyll-paginate
   #- jekyll-autoprefixer
+
+markdown: kramdown
+kramdown:
+  syntax_highlighter_opts:
+    disable : true
