--- a/_config.yml
+++ b/_config.yml
@@ -11,6 +11,7 @@ paginate: 3
 baseurl: ""
 description: "Matt Smith is a Maine-based application developer who builds solutions to deliver engaging user experiences."
 analytics_id: UA-55352436-3
+ga4Id: G-B17534YEJY
 timezone: America/New_York
 
 # Assets
