--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "allthingssmitty.com",
-  "version": "1.0.0",
+  "version": "1.5.0",
   "description": "",
-  "main": "gulpfile.js",
+  "main": "index.mjs",
   "author": "Matt Smith",
-  "license": "ISC",
+  "license": "MIT",
   "scripts": {
     "start": "node index.mjs",
     "test": "echo \"Error: no test specified\" && exit 1"
