--- a/_data/org.yml
+++ b/_data/org.yml
@@ -2,7 +2,7 @@
 title: Matt Smith
 tagline: Modern Web Engineering, Front-End First
 brand: allthingssmitty
-description: Matt Smith is a Maine-based software development engineer who gives deep dives into modern front-end development — CSS, JavaScript, React, TypeScript, and the evolving patterns shaping the web.
+description: Matt Smith is a Maine-based software engineer who gives deep dives into modern front-end development — CSS, JavaScript, React, TypeScript, and the evolving patterns shaping the web.
 url: https://allthingssmitty.com
 baseurl: ""
 social:
